# git-copyright

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: github-actions.yml
src/: config.rs  default_cfg.yml  error.rs  file_ops.rs  git_ops.rs  lib.rs  main.rs  regex_ops.rs
