[package]
description = "Add/update copyright notes based on git history"
version = "0.2.3"
edition = "2021"
license-file = "LICENSE-APACHE"
name = "git_copyright"
readme = "README.md"
repository = "https://github.com/sgasse/git-copyright"

[lib]
name = "git_copyright"
path = "src/lib.rs"

[[bin]]
name = "git_copyright"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "^0.9.0"
futures = "0.3"
glob = "^0.3.0"
log = "^0.4.14"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
